# machine-tracker

./: .gitignore  AUDIT_REPORT.md  GEMINI.md  I18N_REPORT.md  LICENSE  README.md  README_EN.md  SKILL.md  config.yaml.example  pyproject.toml
src/machinetracker/: __main__.py  cli.py  collector.py  config.py  constants.py  differ.py  i18n.py  logger.py  models.py  reporter.py  store.py  systemd_manager.py
src/machinetracker/collectors/: apt.py  base.py  config_files.py  cron.py  docker.py  filesystem.py  network.py  nginx.py  package_managers.py  service_mapper.py  systemd.py
src/machinetracker/resources/: default_config.yaml
src/machinetracker/web/: __init__.py  app.py
src/machinetracker/web/templates/: base.html  dashboard.html  diff.html  history.html  machine.html
tests/: test_differ.py
