[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "machine-tracker"
version = "0.1.0"
description = "A lightweight machine state snapshot and auditing tool for humans and AI."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["devops", "monitoring", "snapshot", "audit", "system-administration"]
authors = [
    { name = "yanglinzhi", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.0.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
mt = "machinetracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
machinetracker = ["web/templates/*.html", "web/static/*", "resources/*.yaml"]
